--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/github.com/davecgh/go-spew"]
 	path = src/github.com/davecgh/go-spew
 	url = git@github.com:masagroup/go-spew.git
+[submodule "src/github.com/pmezard/go-difflib"]
+	path = src/github.com/pmezard/go-difflib
+	url = git@github.com:masagroup/go-difflib.git
