--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/launchpad.net/gocheck"]
 	path = src/launchpad.net/gocheck
 	url = git@github.com:masagroup/gocheck.git
+[submodule "src/github.com/jonas-p/go-shp"]
+	path = src/github.com/jonas-p/go-shp
+	url = git@github.com:masagroup/go-shp.git
